--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,140 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
     <title>UOC Boilerplate</title>
+    <script defer src="../node_modules/@fortawesome/fontawesome-free/js/solid.js"></script>
+    <script defer src="../node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"></script>
   </head>
   <body>
-    <img src="url:./assets/images/logo.png?as=webp&width=300" alt="Universitat Oberta de Catalunya" class="uoc-logo">
-    <h1 class="uoc-title">Hello, UOC!</h1>
-    <p>
-      This is a starter template for the Advanced HTML and CSS Tools courses
-      from the Master's Program in Multimedia Applications and the Master's
-      Program in Web App and Website Development at the Universitat Oberta de
-      Catalunya.
-    </p>
+    <header id="header">
+      <div id="presentacion" class="col col-9">
+        <h1>Roberto <span>Martínez</span></h1>
+        <div class="specialFont h1--mod">Ingeniero informático</div>
+        <p>Lorem ipsum dolor sit amet</p>
+      </div>
+      <div id="personal" class="col col-3">
+        <img src="./assets/images/roberto.jpg">
+        <ul>
+          <li><i class="fas fa-mobile-alt"></i> +34 xxx yyy zzz</li>
+          <li><i class="fas fa-envelope"></i> rmarsan@uoc.edu</li>
+          <li><i class="fas fa-map-marker-alt"></i> Puerto Real, Cádiz</li>
+          <li><i class="fas fa-calendar-alt"></i> 1983</li>
+        </ul>
+      </div>
+    </header>
+    <div id="content">
+      <div class="col col-5 left">
+        <div class="formacion">
+          <h2>Formación</h2>
+          <div class="formacion__elem">
+            <span>2014</span>
+            <p>Grado bla bla bla</p>
+            <span>Universidad/patatin</span>
+          </div>
+          <div class="formacion__elem">
+            <span>2014</span>
+            <p>Grado bla bla bla</p>
+            <span>Universidad/patatin</span>
+          </div>
+          <div class="formacion__elem">
+            <span>2014</span>
+            <p>Grado bla bla bla</p>
+            <span>Universidad/patatin</span>
+          </div>
+        </div>
+        <div class="habilidades">
+          <h2>Habilidades</h2>
+          <div class="habilidades__elem">
+            <span>Habilidad</span>
+            <ul>
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+              <li>4</li>
+              <li class="no">5</li>
+            </ul>
+          </div>
+          <div class="habilidades__elem">
+            <span>Habilidad</span>
+            <ul>
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+              <li>4</li>
+              <li>5</li>
+            </ul>
+          </div>
+          <div class="habilidades__elem">
+            <span>Habilidad</span>
+            <ul>
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+              <li>4</li>
+              <li>5</li>
+            </ul>
+          </div>
+          <div class="habilidades__elem">
+            <span>Habilidad</span>
+            <ul>
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+              <li>4</li>
+              <li>5</li>
+            </ul>
+          </div>
+          <h2>Idiomas</h2>
+          <div class="habilidades__elem">
+            <span>Español</span>
+            <ul>
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+              <li>4</li>
+              <li>5</li>
+            </ul>
+          </div>
+          <div class="habilidades__elem">
+            <span>Inglés</span>
+            <ul>
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+              <li>4</li>
+              <li class="no">5</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col col-7 right">
+        <div class="experiencia">
+          <h2>Experiencia</h2>
+          <div class="experiencia__elem">
+            <h3>Nombre de la empresa</h3>
+            <span>2017-2018</span>
+            <p>Describe brevemente el puesto Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eu maximus dolor, vel pulvinar nulla. Etiam urna massa.</p>
+          </div>
+          <div class="experiencia__elem">
+            <h3>Nombre de la empresa</h3>
+            <span>2017-2018</span>
+            <p>Describe brevemente el puesto Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eu maximus dolor, vel pulvinar nulla. Etiam urna massa.</p>
+          </div>
+          <div class="experiencia__elem">
+            <h3>Nombre de la empresa</h3>
+            <span>2017-2018</span>
+            <p>Describe brevemente el puesto Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eu maximus dolor, vel pulvinar nulla. Etiam urna massa.</p>
+          </div>
+          <div class="experiencia__elem">
+            <h3>Nombre de la empresa</h3>
+            <span>2017-2018</span>
+            <p>Describe brevemente el puesto Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eu maximus dolor, vel pulvinar nulla. Etiam urna massa.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+
+    </footer>
     <script src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
   </body>
 </html>
