--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <header id="header">
       <div id="presentacion" class="col col-9">
         <h1>Roberto <span>Martínez</span></h1>
-        <div class="specialFont h1--mod">Ingeniero informático</div>
+        <div class="special-font header--mod">Ingeniero informático</div>
         <p>Lorem ipsum dolor sit amet</p>
       </div>
       <div id="personal" class="col col-3">
