--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
-    <title>UOC Boilerplate</title>
+    <title>Robero Martínez Sánchez CV</title>
     <script defer src="../node_modules/@fortawesome/fontawesome-free/js/solid.js"></script>
     <script defer src="../node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"></script>
   </head>
@@ -17,7 +17,7 @@
         <p>He tenido la oportunidad de trabajar con múltiples tecnologías e I+D y he llegado a la conclusión de que me encanta mi trabajo. Me gusta mantenerme activo, ampliar mis conocimientos, codearme con compañeros de sector y abrirme a nuevas áreas de conocimiento que estén relacionadas con mi trabajo. Mi objetivo es y será ser siempre más eficaz y eficiente.</p>
       </div>
       <div id="personal" class="col col-3">
-        <img src="./assets/images/roberto.jpg">
+        <img src="./assets/images/roberto.jpg" alt="Fotografía de Roberto Martínez de frente">
         <ul>
           <li><i class="fas fa-mobile-alt"></i> +34 xxx yyy zzz</li>
           <li><i class="fas fa-envelope"></i> rmarsan@uoc.edu</li>
