--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
     <link rel="icon" type="image/png" href="favicon.png">
     <title>Robero Martínez Sánchez CV</title>
