--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         </ul>
       </div>
     </header>
-    <div id="content">
+    <section>
       <div class="col col-5 left">
         <div class="formacion">
           <h2>Educación</h2>
@@ -482,7 +482,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <footer>
       <div class="footer__elem">
         <h2>Roberto Martínez Sánchez</h2>
